# argparse-wizard

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
argparse_wizard/: __init__.py  base.py  cli_tree.py  commands.py  exceptions.py  version.py
arpgarse_wizard/: __init__.py
examples/: greet.py
tests/: test_argparse_wizard.py
