[build-system]
requires = ["pdm-backend>=2.4.0"]
build-backend = "pdm.backend"

[project]
name = "argparse-wizard"
version = "1.0.0-dev.1"
description = "Cleaner object-oriented argparse-driven command-line interfaces"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Sam McKelvie", email = "dev@mckelvie.org" },
]
keywords = ["argparse", "cli", "command-line", "subcommands", "asyncio"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = ["typing-extensions>=4.12.0"]

[project.urls]
Homepage = "https://github.com/mckelvie-org/argparse-wizard"
Source = "https://github.com/mckelvie-org/argparse-wizard"
"Bug Tracker" = "https://github.com/mckelvie-org/argparse-wizard/issues"
Changelog = "https://github.com/mckelvie-org/argparse-wizard/releases"

[dependency-groups]
dev = [
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "ruff>=0.6.0",
    "pdm>=2.27.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["argparse_wizard"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["argparse_wizard"]

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["argparse_wizard"]

[tool.pdm.scripts]
test = "pytest"
lint = "ruff check ."
typecheck = "mypy argparse_wizard"
post_install = "./bin/post-install"
